test/fail_compilation/imports/test313a.d
module imports.test313a;

import imports.test313priv;
